# op-img

./: .gitignore  README.md  isolate-threshold.sh  op  pyproject.toml
bit-crush/: bit-crush.sh
channel-offset/: channel-offset.sh
channel-swap/: channel-swap.py
closest-palette/: closest-palette.py
cross-hatch/: cross-hatch.py
dot-halftone/: dot-halftone.py
echo/: echo.py
fold/: fold.sh
invert-lightness/: invert-lightness.py
isolate-threshold/: isolate-threshold.sh
kaleidoscope/: kaleidoscope.py
line-halftone/: line-halftone.py
mask-color/: code.ts  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html
pixel-sort/: pixel-sort.py
polar/: polar.py
posterize-hsv/: posterize-hsv.py
raw-bend/: raw-bend.py
res-crush/: res-crush.sh
scan-glitch/: scan-glitch.py
seam-carve/: seam-carve.py
slit-scan/: slit-scan.py
stipple/: stipple.py
tests/: conftest.py  test_bit_crush.py  test_channel_offset.py  test_channel_swap.py  test_closest_palette.py  test_cross_hatch.py  test_dot_halftone.py  test_echo.py  test_fold.py  test_invert_lightness.py  test_isolate_threshold.py  test_kaleidoscope.py  test_line_halftone.py  test_op_cli.py  test_pixel_sort.py  test_polar.py  test_posterize_hsv.py  test_raw_bend.py  test_res_crush.py  test_scan_glitch.py  test_seam_carve.py  test_slit_scan.py  test_stipple.py  test_thermal.py  test_tile_shuffle.py  test_wrong_stride.py
thermal/: thermal.py
tile-shuffle/: tile-shuffle.py
wrong-stride/: wrong-stride.py
